--- a/EProject/index.html
+++ b/EProject/index.html
@@ -5,6 +5,7 @@
   <title>Creating Subdivs</title>
 </head>
 <body>
+  <button onclick="resultis()">BUY</button>
   <div id="mainDiv"></div>
   <script src="script.js"></script>
 </body>
