--- a/tabletask.html
+++ b/tabletask.html
@@ -6,8 +6,34 @@
     <link rel="stylesheet" href="tabletask.css">
 </head>
 <body>
-    <table>
-        
+    <table border="">
+        <tr>
+            <th colspan="2">Name</th>
+            <th>Age</th>
+        </tr> 
+        <tr>
+            <td>Ram</td>
+            <td>Vanumu</td>
+            <td>19</td>
+        </tr>
+        <tr>
+            <td>Ram</td>
+            <td>Vanumu</td>
+            <td>19</td>
+        </tr>
+        <tr>
+            <td>Ram</td>
+            <td>Vanumu</td>
+            <td rowspan="3">19</td>
+        </tr>  
+        <tr>
+            <td>Ram</td>
+            <td>Vanumu</td>
+        </tr>
+        <tr>
+            <td>Ram</td>
+            <td>Vanumu</td>
+        </tr>
     </table>
 </body>
 </html>
